# AI_Planet

./: .gitignore  DEPLOYMENT_COMPLETE.md  HYBRID_RAG_README.md  QUICK_START.md  README.md  deploy_hybrid_rag.sh  docker-compose.yml  package-lock.json  package.json  test_hybrid_rag.sh
backend/: .dockerignore  Dockerfile  README.md  data.txt  env.example  ingestion.py  init_db.py  main.py  pyproject.toml  requirements.txt  requirements_light.txt  requirements_minimal.txt  standalone_hybrid_rag.py
backend/models/: database.py
backend/routers/: auth.py  hybrid_rag.py  hybrid_rag_simple.py  stacks.py  workflow.py  workflow_storage.py
backend/services/: database.py  hybrid_rag_service.py  hybrid_rag_simple.py  llm_service.py  vector_service.py
docs/: ARCHITECTURE.md  CODE_DOCUMENTATION.md  HLD_LLD_DESIGN.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginModal.tsx
frontend/src/components/chat/: ChatModal.tsx
frontend/src/components/dashboard/: CreateStackModal.tsx  Dashboard.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/workflow/: Canvas.tsx
frontend/src/components/workflow/nodes/: KnowledgeBaseNode.tsx  LLMEngineNode.tsx  OutputNode.tsx  UserQueryNode.tsx  WebSearchNode.tsx
frontend/src/services/: api.ts
